Prevent image/video overflow

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,6 +21,13 @@
 
   &.preview-modal .preview-container {
     overflow: auto;
+
+    &.image-embed img,
+    &.video-embed video {
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: contain;
+    }
   }
 
   .highlighted-token {
